fix: attempt long name wraps

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -389,6 +389,8 @@ app-search-bar {
     }
 
     .location-name {
-        white-space: nowrap;
-    }
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 }
